@startuml

title __COMPANY's Class Diagram__\n

  namespace com.company {
    interface com.company.Argument {
        {abstract} + oblicz()
    }
  }
  

  namespace com.company {
    class com.company.Dodaj {
        + Dodaj()
        + oblicz()
    }
  }
  

  namespace com.company {
    class com.company.Dzielenie {
        + Dzielenie()
        + oblicz()
    }
  }
  

  namespace com.company {
    class com.company.Main {
        {static} + main()
    }
  }
  

  namespace com.company {
    class com.company.Mnozenie {
        + Mnozenie()
        + oblicz()
    }
  }
  

  namespace com.company {
    class com.company.Odejmowanie {
        + Odejmowanie()
        + oblicz()
    }
  }
  

  namespace com.company {
    class com.company.Stala {
        - value : int
        + Stala()
        + oblicz()
        + toString()
    }
  }
  

  namespace com.company {
    abstract class com.company.Wyrazenie {
        # znak : char
        + toString()
    }
  }
  

  namespace com.company {
    class com.company.Zmienna {
        - value : int
        + Zmienna()
        + oblicz()
        + toString()
    }
  }
  

  com.company.Dodaj -up-|> com.company.Wyrazenie
  com.company.Dzielenie -up-|> com.company.Wyrazenie
  com.company.Mnozenie -up-|> com.company.Wyrazenie
  com.company.Odejmowanie -up-|> com.company.Wyrazenie
  com.company.Stala .up.|> com.company.Argument
  com.company.Wyrazenie .up.|> com.company.Argument
  com.company.Wyrazenie o-- com.company.Argument : argument1
  com.company.Wyrazenie o-- com.company.Argument : argument2
  com.company.Zmienna .up.|> com.company.Argument


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
